# libgdx-webp-loader

./: LICENSE  README.md  build.gradle  settings.gradle
.github/toolchains/: linux32.cmake  mingw32.cmake  mingw64.cmake
.github/workflows/: build.yml  publish.yml
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
android/src/com/github/zumikua/: AndroidLauncher.java
android/src/io/github/zumikua/: AndroidLauncher.java
core/src/com/github/zumikua/: WebPLoaderSample.java
core/src/io/github/zumikua/: WebPLoaderSample.java
desktop/: build.gradle
desktop/src/com/github/zumikua/desktop/: DesktopLauncher.java
desktop/src/io/github/zumikua/desktop/: DesktopLauncher.java
gradle/wrapper/: gradle-wrapper.properties
jni_headers/: README.md
scripts/: publish-module-android.gradle  publish-module-common.gradle  publish-module-java.gradle  publish-root.gradle
webploader-android/: build.gradle
webploader-android/src/androidTest/java/cos/zumikua/webploader/: ExampleInstrumentedTest.java
webploader-android/src/main/: AndroidManifest.xml
webploader-android/src/main/cpp/: CMakeLists.txt  main.cpp
webploader-android/src/main/java/com/github/zumikua/android/: AndroidNativeInterface.java
webploader-android/src/main/java/io/github/zumikua/android/: AndroidNativeInterface.java
webploader-android/src/test/java/cos/zumikua/webploader/: ExampleUnitTest.java
webploader-common/: build.gradle
webploader-common/src/main/java/com/github/zumikua/webploader/common/: WebPLoaderFactory.java  WebPLoaderNativeInterface.java  WebPPixmapFactory.java
webploader-common/src/main/java/io/github/zumikua/webploader/common/: WebPFileTextureData.java  WebPLoaderFactory.java  WebPLoaderNativeInterface.java  WebPPixmapFactory.java  WebPPixmapLoader.java  WebPTextureFactory.java  WebPTextureLoader.java
webploader-desktop/: build.gradle
webploader-desktop/src/main/java/com/github/zumikua/webploader/desktop/: DesktopNativeInterface.java  SharedLibraryLoader.java
webploader-desktop/src/main/java/io/github/zumikua/webploader/desktop/: DesktopNativeInterface.java  SharedLibraryLoader.java
